--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "/client/build/**",
-      "use": "@vercel/static"
-    },
+
     {
       "src": "/api/**",
       "use": "@vercel/node"
@@ -17,7 +14,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/client/build/$1"
+      "dest": "/"
     }
   ],
   "outputDirectory": "client/build"
